automatically backed up by learn

--- a/exceptional-realty/real-estate-listings.html
+++ b/exceptional-realty/real-estate-listings.html
@@ -9,6 +9,9 @@
     <h2>Realty Group</h2>
 
     <h3>Property Archives</h3>
+    <h3>Popular Listings</h3>
+    <ol>
+      <li>
     <h4>2014</h4>
     <ul>
       <li>Dec</li>
@@ -18,7 +21,7 @@
           <li>17th</li>
           <li>18th</li>
         </ul>
-      </li>    
+      </li>
     </ul>
   </body>
 </html>
